# hawkeye

./: .dockerignore  .env.example  Cargo.toml  Dockerfile  LICENSE-APACHE  LICENSE-MIT  Makefile  README.md  docker-compose.yml  entrypoint.sh  minikube-build.sh
.github/workflows/: deploy.yml  test.yml
chart/: Chart.yaml  values.yaml
chart/templates/: hawkeye.yml  hawkeyedb-migration.yml  hawkeyedb-volume.yml  hawkeyedb.yml  secrets.yml
hawkeye-entity/: Cargo.toml
hawkeye-entity/src/: lib.rs
hawkeye-entity/src/entity/: article.rs  mod.rs  prelude.rs
migration/: Dockerfile
migration/src/: lib.rs  m20220913_000001_create_article_table.rs
src/: main.rs  natalie.rs  select.rs  selector.rs  util.rs  webhook.rs
