[package]
name = "hawkeye"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.63"
async-trait = "0.1.57"
cssparser = "0.29.6"
fantoccini = { version = "0.19.3", features = ["rustls-tls"] }
once_cell = "1.14.0"
reqwest = { version = "0.11.11", features = ["json", "rustls"] }
scraper = "0.13.0"
sea-orm = { version = "0.9.2", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros", "debug-print"] }
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"
serenity = "0.11.5"
thiserror = "1.0.33"
tokio = { version = "1.21.0", features = ["full"] }
uuid = { version = "1.1.2", features = ["v4"] }
hawkeye-entity = { path = "hawkeye-entity" }
chrono = "0.4.22"

[workspace]
members = [
    "migration",
    "hawkeye-entity"
]
